add stream poll_fn example

--- a/async_stream_workspace_example/Cargo.toml
+++ b/async_stream_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "stream_example2",
         "buffer_stream_example",
         "stream_for_each_concurrent_example",
+        "stream_poll_fn_example",
 ]
