add tokio lines stream example

--- a/async_stream_workspace_example/Cargo.toml
+++ b/async_stream_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "buffer_stream_example",
         "stream_for_each_concurrent_example",
         "stream_poll_fn_example",
+        "tokio_lines_stream_example",
 ]
