add tokio yamux stream example

--- a/async_stream_workspace_example/Cargo.toml
+++ b/async_stream_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
         "stream_for_each_concurrent_example",
         "stream_poll_fn_example",
         "tokio_lines_stream_example",
+        "tokio_yamux_stream_example",
 ]
