add sink asyncwrite example

--- a/async_stream_workspace_example/Cargo.toml
+++ b/async_stream_workspace_example/Cargo.toml
@@ -12,4 +12,5 @@ members = [
         "tokio_lines_stream_example",
         "tokio_yamux_stream_example",
         "stream_wrapper_example",
+        "sink_asyncwrite_example",
 ]
