--- a/async_stream_workspace_example/Cargo.toml
+++ b/async_stream_workspace_example/Cargo.toml
@@ -13,4 +13,5 @@ members = [
         "tokio_yamux_stream_example",
         "stream_wrapper_example",
         "sink_asyncwrite_example",
+        "sink_unfold_example",
 ]
