add lcs suffix array example, not finished

--- a/longest_common_substring_workspace_example/Cargo.toml
+++ b/longest_common_substring_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "find_longest_matching_sub_sequence_example",
         "longest_common_subsequence_example",
+        "lcs_suffix_array_example",
 ]
