add alcs example

--- a/longest_common_substring_workspace_example/Cargo.toml
+++ b/longest_common_substring_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "find_longest_matching_sub_sequence_example",
         "longest_common_subsequence_example",
         "lcs_suffix_array_example",
+        "alcs_example",
 ]
