--- a/tonic_workspace_example/Cargo.toml
+++ b/tonic_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "tonic_tls_client_example",
         "tonic_multiplex_server_example",
         "tonic_multiplex_client_example",
+        "rust-grpc",
 ]
