add hyper_timeout client example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -16,4 +16,5 @@ members = [
         "hyper_client_send_request_example",
         "hyper_client_request_channel_example",
         "http_body_trait_example",
+        "hyper_timeout_client_example",
 ]
