add hyper tls client example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -17,4 +17,5 @@ members = [
         "hyper_client_request_channel_example",
         "http_body_trait_example",
         "hyper_timeout_client_example",
+        "hyper_tls_client_example",
 ]
