add hyper legacy timeout client example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -18,4 +18,5 @@ members = [
         "http_body_trait_example",
         "hyper_timeout_client_example",
         "hyper_tls_client_example",
+        "hyper_legacy_timeout_client_example",
 ]
