--- a/volo_workspace_example/volo_http_simple_example/Cargo.toml
+++ b/volo_workspace_example/volo_http_simple_example/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-stream = "0.3.5"
+bytes = "1.5.0"
 faststr = "0.2.12"
 serde = { version = "1.0.193", features = ["derive"] }
-tokio = { version = "1.35.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["full"] }
+tokio-stream = "0.1.14"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-volo-http = "0.1.3"
+volo = "0.9.0"
+volo-http = { version = "0.1.18", features = ["full"] }
