add raw pointer asm example

--- a/pointer_workspace_example/Cargo.toml
+++ b/pointer_workspace_example/Cargo.toml
@@ -25,4 +25,5 @@ members = [
         "ptr_write_bytes_example",
         "std_ptr_addr_of_example",
         "null_ptr_example",
+        "raw_pointer_asm_example",
 ]
