add hyper legacy client poll timeout example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -19,4 +19,5 @@ members = [
         "hyper_timeout_client_example",
         "hyper_tls_client_example",
         "hyper_legacy_timeout_client_example",
+        "hyper_legacy_client_poll_timeout_example",
 ]
