--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -20,4 +20,5 @@ members = [
         "hyper_tls_client_example",
         "hyper_legacy_timeout_client_example",
         "hyper_legacy_client_poll_timeout_example",
+        "hyper_impl_tower_service_uri_example",
 ]
