add tower_service call code example

--- a/hyper_workspace_example/hyper_util_client_example/Cargo.toml
+++ b/hyper_workspace_example/hyper_util_client_example/Cargo.toml
@@ -11,3 +11,4 @@ http-body-util = "0.1.0"
 hyper = { version = "1.1.0", features = ["full"] }
 hyper-util = { version = "0.1.2", features = ["full"] }
 tokio = { version = "1.35.1", features = ["full"] }
+tower-service = "0.3.2"
