--- a/poem_workspace_example/Cargo.toml
+++ b/poem_workspace_example/Cargo.toml
@@ -10,4 +10,6 @@ members = [
         "poem_openapi_generics_example",
         "poem_openapi_auth_multiple_example",
         "poem_openapi_users_crud_example",
+        "poem_grpc_server_example",
+        "poem_grpc_client_example",
 ]
