--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-web = "4.4.1"
 clap = { version = "4.4.18", features = ["derive", "env"] }
 env_logger = "0.11.1"
+memstore = {git = "https://github.com/datafuselabs/openraft", features = []}
 openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde", "storage-v2"]}
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
