--- a/panic_workspace_example/Cargo.toml
+++ b/panic_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "panic_example",
         "panic_handler_generate_coredump_example",
         "panic_take_hook_example",
+        "panic_assertunwindsafe_example",
 ]
