--- a/chitchat_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
+++ b/chitchat_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
-openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde", "storage-v2"] }
+openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"]}
 clap = { version = "4.4.18", features = ["derive", "env"] }
 console-subscriber = "0.2.0"
 cool-id-generator = "1.0.1"
