--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.4.1"
+actix-web = "4.5.1"
 clap = { version = "4.4.18", features = ["derive", "env"] }
 env_logger = "0.11.1"
 memstore = {git = "https://github.com/datafuselabs/openraft", features = []}
-openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde", "storage-v2"]}
+openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde"]}
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
