--- a/openraft_workspace_example/raft_kv_memstore_singlethreaded/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_singlethreaded/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.18", features = ["derive", "env"] }
-openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde", "storage-v2", "singlethreaded"]}
+openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde", "singlethreaded"]}
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 tokio = { version = "1.36.0", features = ["sync"] }
