--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -23,4 +23,5 @@ members = [
         "hyper_impl_tower_service_uri_example",
         "hyper_custom_connect_trait_example",
         "tower_makeconnection_example",
+        "hyper_remote_addr_example",
 ]
