add mlua hyper client example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -25,4 +25,5 @@ members = [
         "tower_makeconnection_example",
         "hyper_remote_addr_example",
         "hyper_extension_insert_example",
+        "mlua_hyper_client_example",
 ]
