add mlua hyper server example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -26,4 +26,5 @@ members = [
         "hyper_remote_addr_example",
         "hyper_extension_insert_example",
         "mlua_hyper_client_example",
+        # "mlua_hyper_server_example",
 ]
