--- a/hyper_workspace_example/mlua_hyper_server_example/Cargo.toml
+++ b/hyper_workspace_example/mlua_hyper_server_example/Cargo.toml
@@ -8,5 +8,5 @@ bytes = "1.5.0"
 http-body-util = "0.1.1"
 hyper = { version = "1.2.0", features = ["full"] }
 hyper-util = { version = "0.1.3", features = ["full"] }
-mlua = { version = "0.9.6", features = ["macros", "lua54", "async"] }
+mlua = { version = "0.9.6", features = ["macros", "lua54", "async", "send", "vendored"] }
 tokio = { version = "1.36.0", features = ["full"] }
