--- a/tokenizers_workspace_example/Cargo.toml
+++ b/tokenizers_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "tokenizers_serialization_example",
         "tokenizers_impl_example",
+        "candle_lora_example",
 ]
