--- a/hyper_workspace_example/mlua_hyper_server_example/Cargo.toml
+++ b/hyper_workspace_example/mlua_hyper_server_example/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 bytes = "1.5.0"
 http-body-util = "0.1.1"
-hyper = { version = "1.2.0", features = ["full"] }
-hyper-util = { version = "0.1.3", features = ["full"] }
-mlua = { version = "0.9.6", features = ["macros", "lua54", "async", "send", "vendored"] }
+hyper = { version = "1", features = ["client", "server"] }
+hyper-util = { version = "0.1.3", features = ["server", "client", "client-legacy", "tokio", "http1"] }
+mlua = { version = "0.9.6", features = ["macros", "lua54", "async", "send", "lua54"] }
 tokio = { version = "1.36.0", features = ["macros", "rt"] }
