add hyper_util server async_stream example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -27,4 +27,5 @@ members = [
         "hyper_extension_insert_example",
         "mlua_hyper_client_example",
         "mlua_hyper_server_example",
+        "hyper_util_server_async_stream_example",
 ]
