--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -10,7 +10,7 @@ actix-web = "4.5.1"
 clap = { version = "4.4.18", features = ["derive", "env"] }
 env_logger = "0.11.1"
 memstore = {git = "https://github.com/datafuselabs/openraft", features = []}
-openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde"]}
+openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde", "type-alias"]}
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
