--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -10,7 +10,7 @@ rocksdb = "0.22.0"
 tide = "0.16.0"
 clap = { version = "4.4.18", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
+openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde", "type-alias"] }
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
