--- a/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 byteorder = "1.5.0"
 clap = { version = "4.5", features = ["derive", "env"] }
-openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
+openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde", "type-alias"] }
 poem = "2.0.0"
 poem-openapi = { version = "4.0.0", features = ["swagger-ui", "email"] }
 reqwest = { version = "0.11.24", features = ["json"] }
