--- a/ftlog_example/Cargo.toml
+++ b/ftlog_example/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 ftlog = "0.2.0"
+time = { version = "0.3.34", features = ["local-offset", "formatting"] }
 tokio = { version = "1.22.0", features = ["full"] }
