add libp2p misc server example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -31,4 +31,5 @@ members = [
         "libp2p_tokio_discover_nodes_example",
         "libp2p_quic_server_example",
         "libp2p_quic_client_example",
+        "libp2p_misc_server_example",
 ]
