--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -29,4 +29,5 @@ members = [
         "mlua_hyper_server_example",
         "hyper_util_server_async_stream_example",
         "hyper_rustls_server_example",
+        "hyper_rustls_client_example",
 ]
