--- a/opencv_text_detection/Cargo.toml
+++ b/opencv_text_detection/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-opencv = "0.89.0"
+opencv = { version = "0.89.0", features = ["dnn", "videoio"] }
