add solana program code

--- a/solana_workspace_example/solana_program_entry_example/Cargo.toml
+++ b/solana_workspace_example/solana_program_entry_example/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+borsh = { version = "1.4.0", features = ["derive"] }
 solana-program = "1.18.11"
 
 [lib]
