--- a/tracing_opentelemetry_example/Cargo.toml
+++ b/tracing_opentelemetry_example/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 tracing = "0.1"
 tracing-subscriber = "0.3"
-tracing-attributes = "0.1.22"
-tracing-opentelemetry = "0.17.4"
+tracing-attributes = "0.1.27"
+tracing-opentelemetry = "0.23.0"
 
-tokio = { version = "1.20.0", features = ["full"] }
-opentelemetry = { version = "0.17.0", features = ["rt-async-std"]}
-opentelemetry-otlp = { version = "0.10.0", features = ["grpc-sys"] }
+tokio = { version = "1.37.0", features = ["full"] }
+opentelemetry = { version = "0.22.0", features = []}
+opentelemetry-otlp = { version = "0.15.0", features = [] }
+opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
