--- a/mlua_workspace_example/mlua_lib_example/Cargo.toml
+++ b/mlua_workspace_example/mlua_lib_example/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-mlua = { version = "0.8.6", features = ["lua54", "vendored", "module"] }
+mlua = { version = "0.9.7", features = ["lua54", "module", "macros"] }
 
 [lib]
 crate-type = ["cdylib"]
