--- a/mlua_workspace_example/Cargo.toml
+++ b/mlua_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "mlua_lib_example",
         "mlua_exec_lua_script_example",
         "mlua_check_lua_type_example",
+        "mlua_set_hook_example",
 ]
