add lua call mlua_sys shared library example

--- a/mlua_workspace_example/Cargo.toml
+++ b/mlua_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "mlua_check_lua_type_example",
         "mlua_set_hook_example",
         "mlua_sys_gettop_example",
+        "lua_call_mlua_sys_shared_lib_example",
 ]
