delete module flag

--- a/mlua_workspace_example/lua_call_mlua_sys_shared_lib_example/Cargo.toml
+++ b/mlua_workspace_example/lua_call_mlua_sys_shared_lib_example/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-mlua-sys = { version = "0.5.2", features = ["lua54", "module"] }
+mlua-sys = { version = "0.5.2", features = ["lua54"] }
 
 [lib]
 crate-type = ["rlib", "cdylib"]
