add rquickjs hot reload example

--- a/rquickjs_workspace_example/Cargo.toml
+++ b/rquickjs_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "native_module_example",
         "module_loader_example",
+        "rquickjs_hot_reload_example",
 ]
