--- a/rquickjs_workspace_example/rquickjs_hot_reload_example/Cargo.toml
+++ b/rquickjs_workspace_example/rquickjs_hot_reload_example/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+notify = "6.1.1"
 rquickjs = { version = "0.6.0", default-features = false, features = ["futures", "rust-alloc", "loader", "dyn-load"] }
