--- a/rquickjs_workspace_example/rquickjs_hot_reload_example/Cargo.toml
+++ b/rquickjs_workspace_example/rquickjs_hot_reload_example/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 notify = "6.1.1"
 rquickjs = { version = "0.6.0", default-features = false, features = ["futures", "rust-alloc", "loader", "dyn-load"] }
+tokio = { version = "1.37.0", features = ["full"] }
