--- a/crossbeam_workspace_example/crossbeam_channel_timer_example/Cargo.toml
+++ b/crossbeam_workspace_example/crossbeam_channel_timer_example/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "crossbeam-utils_example"
+name = "crossbeam_channel_timer_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossbeam-utils = "0.8.5"
+crossbeam-channel = "0.5.12"
