add anchor mycalculator dapp example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "solana_program_hello_example",
         "solana_program_entry_example",
+        "anchor_mycalculatordapp",
 ]
