add solana serialize deserialize example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "solana_program_hello_example",
         "solana_program_entry_example",
         # "anchor_mycalculatordapp",
+        "solana_serialize_deserialize_example",
 ]
