--- a/walkdir_workspace_example/Cargo.toml
+++ b/walkdir_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "walkdir_example",
         "walkdir_recursive_rmdir_example",
+        "walkdir_command_example",
 ]
