--- a/fs_workspace_example/Cargo.toml
+++ b/fs_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "fs_read_write_example",
         "fs_rename_example",
         "fs_symlink_metadata_example",
+        "fs_mv_example",
 ]
