add walkdir skip current dir example

--- a/walkdir_workspace_example/Cargo.toml
+++ b/walkdir_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "walkdir_example",
         "walkdir_recursive_rmdir_example",
         "walkdir_command_example",
+        "walkdir_skip_current_dir_example",
 ]
