add walkdir call command example

--- a/walkdir_workspace_example/Cargo.toml
+++ b/walkdir_workspace_example/Cargo.toml
@@ -6,5 +6,6 @@ members = [
         "walkdir_example",
         "walkdir_recursive_rmdir_example",
         "walkdir_command_example",
+        "walkdir_call_command_example",
         "walkdir_skip_current_dir_example",
 ]
