add walkdir remove empty dir example

--- a/walkdir_workspace_example/Cargo.toml
+++ b/walkdir_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "walkdir_command_example",
         "walkdir_call_command_example",
         "walkdir_skip_current_dir_example",
+        "walkdir_remove_empty_dir_example",
 ]
