--- a/tokio_workspace_example/tokio_cron_scheduler_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_cron_scheduler_example/Cargo.toml
@@ -8,7 +8,13 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 chrono = "0.4.38"
+chrono-tz = "0.9.0"
 log = "0.4.21"
 tokio = { version = "1.38.0", features = ["full"] }
-tokio-cron-scheduler = "0.10.2"
+tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+uuid = "1.8.0"
+
+[features]
+signal = ["tokio/signal"]
