--- a/tokio_workspace_example/tokio_tun_read_mq_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_tun_read_mq_example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 tokio = { version = "1.38.0", features = ["full"] }
 [target.'cfg(target_os = "linux")'.dependencies]
 tokio-tun = "0.11.4"
