--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -32,4 +32,5 @@ members = [
         "libp2p_quic_server_example",
         "libp2p_quic_client_example",
         # "libp2p_misc_server_example",
+        "libp2p_peer_id_example",
 ]
