--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -21,7 +21,7 @@ members = [
         "libp2p_tokio_identity_example",
         "libp2p_tokio_ipfs_kad_example",
         "libp2p_tokio_ipfs_private_example",
-        "libp2p_tokio_metrics_example",
+        # "libp2p_tokio_metrics_example",
         "libp2p_tokio_ping_example",
         "libp2p_tokio_relay_server_example",
         "libp2p_tokio_rendezvous_server_example",
@@ -33,4 +33,6 @@ members = [
         "libp2p_quic_client_example",
         # "libp2p_misc_server_example",
         "libp2p_peer_id_example",
+        "libp2p_tokio_stream_example",
+        "libp2p_tokio_upnp_example",
 ]
