--- a/libp2p_workspace_example/libp2p_gossipsub_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_gossipsub_chat_example/Cargo.toml
@@ -10,3 +10,4 @@ env_logger = "0.11.3"
 futures = "0.3.30"
 libp2p = {version = "0.53.2", features = ["full"]}
 tokio = { version = "1.38.1", features = ["full"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
