--- a/libp2p_workspace_example/libp2p_tokio_stream_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_stream_example/Cargo.toml
@@ -6,9 +6,16 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 futures = "0.3.30"
-libp2p = { version = "0.53.2", features = ["tokio", "quic"] }
-libp2p-stream = "0.1.0-alpha.1"
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "e2e98ad5e8f8ab2c0ae037b69a3a7149a116bf02", features = ["tokio", "quic"] }
+libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p", rev = "e2e98ad5e8f8ab2c0ae037b69a3a7149a116bf02"}
 rand = "0.8.5"
 tokio = { version = "1.38.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+rustls = "0.23.10"
+rustls-webpki = "0.102.4"
+
+# compile with this command
+# cargo update -p rustls@0.23.11 --precise 0.23.10
+# cargo update -p rustls-webpki@0.102.5 --precise 0.102.4
+# see https://giters.com/libp2p/rust-libp2p/issues/5487
