--- a/libp2p_workspace_example/libp2p_tokio_stream_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_stream_example/Cargo.toml
@@ -6,15 +6,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 futures = "0.3.30"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "e2e98ad5e8f8ab2c0ae037b69a3a7149a116bf02", features = ["tokio", "quic"] }
-libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p", rev = "e2e98ad5e8f8ab2c0ae037b69a3a7149a116bf02"}
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["tokio", "quic"] }
+libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9"}
 rand = "0.8.5"
 tokio = { version = "1.38.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-rustls = "0.23.10"
-rustls-webpki = "0.102.4"
 
+# no more needed
 # compile with this command
 # cargo update -p rustls@0.23.11 --precise 0.23.10
 # cargo update -p rustls-webpki@0.102.5 --precise 0.102.4
