--- a/libp2p_workspace_example/libp2p_blockchain_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_blockchain_example/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.26"
 hex = "0.4.3"
-libp2p = { version = "0.52.1", features = ["full"] }
-libp2p-mplex = "0.40.0"
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
+libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9"}
 log = "0.4.19"
 once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
