--- a/libp2p_workspace_example/libp2p_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_example/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.28"
-libp2p = { version = "0.52.3", features = ["full"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
