--- a/libp2p_workspace_example/libp2p_floodsub_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_floodsub_chat_example/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.3"
 futures = "0.3.30"
-libp2p = { version = "0.53.2", features = ["full"] }
-libp2p-mplex = "0.41.0"
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
+libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9" }
 tokio = { version = "1.38.1", features = ["full"] }
