--- a/libp2p_workspace_example/libp2p_kademlia_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_kademlia_example/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 futures = "0.3.30"
-libp2p = {version = "0.53.2", features = ["full"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
 tokio = { version = "1.38.1", features = ["full"] }
