--- a/libp2p_workspace_example/libp2p_tokio_file_sharing_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_file_sharing_example/Cargo.toml
@@ -10,7 +10,7 @@ clap = { version = "4.5.9", features = ["derive"] }
 either = "1.13.0"
 env_logger = "0.11.3"
 futures = "0.3.30"
-libp2p = { version = "0.53.2", features = ["full"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
 serde = { version = "1.0.204", features = ["derive"] }
 tokio = { version = "1.38.1", features = ["full"] }
 uuid = "1.10.0"
