--- a/libp2p_workspace_example/libp2p_tokio_ipfs_private_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_ipfs_private_example/Cargo.toml
@@ -10,7 +10,7 @@ async-trait = "0.1.81"
 either = "1.13.0"
 env_logger = "0.11.3"
 futures = "0.3.30"
-libp2p = { version = "0.53.2", features = ["full"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
 tokio = { version = "1.38.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
