--- a/libp2p_workspace_example/libp2p_tokio_relay_server_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_relay_server_example/Cargo.toml
@@ -10,7 +10,7 @@ async-trait = "0.1.81"
 clap = { version = "4.5.9", features = ["derive"] }
 env_logger = "0.11.3"
 futures = "0.3.30"
-libp2p = { version = "0.53.2", features = ["full"] }
-libp2p-quic = { version = "0.10.3", features = ["tokio"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
+libp2p-quic = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["tokio"] } 
 tokio = { version = "1.38.1", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
