--- a/libp2p_workspace_example/libp2p_tokio_upnp_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_upnp_example/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.30"
-libp2p = { version = "0.53.2", features = ["tokio", "dns", "macros", "noise", "ping", "tcp", "yamux", "upnp"] }
+libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
 tokio = { version = "1.38.1", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
