add serde json server & client example

--- a/serde_workspace_example/Cargo.toml
+++ b/serde_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
         "serde_json_example",
         "serde_json_example2",
         "serde_yaml_example",
+        "serde_json_server_client_example",
 ]
