add libp2p tokio stream with existing key example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -34,5 +34,6 @@ members = [
         # "libp2p_misc_server_example",
         "libp2p_peer_id_example",
         "libp2p_tokio_stream_example",
+        "libp2p_tokio_stream_with_existing_key_example",
         "libp2p_tokio_upnp_example",
 ]
