--- a/libp2p_workspace_example/libp2p_tokio_stream_with_existing_key_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_stream_with_existing_key_example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 futures = "0.3.30"
+hex = "0.4.3"
 libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9", features = ["full"] }
 libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p", rev = "1617abb3bfcf3e8663568e90a8fc4009aef04ba9"}
 rand = "0.8.5"
