--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -35,5 +35,6 @@ members = [
         "libp2p_peer_id_example",
         "libp2p_tokio_stream_example",
         "libp2p_tokio_stream_with_existing_key_example",
+        "libp2p_tokio_stream_only_client_example",
         "libp2p_tokio_upnp_example",
 ]
