--- a/reqwest_workspace_example/Cargo.toml
+++ b/reqwest_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "reqwest_streams_example",
         "reqwest_get_tokio_stream_example",
         "reqwest_post_protobuf_tokio_stream_example",
+        "reqwest_get_post_state_channel_example",
 ]
