add libp2p authenticate example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -38,4 +38,5 @@ members = [
         "libp2p_tokio_stream_with_existing_key_example",
         "libp2p_tokio_stream_only_client_example",
         "libp2p_tokio_upnp_example",
+        "libp2p_authenticate_example",
 ]
