add axum_auth custom example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -16,6 +16,7 @@ members = [
         # "axum_prost_server_example",
         "reqwest_prost_client_example",
         "axum_auth_example",
+        "axum_auth_custom_example",
         "axum_websocket_server_example",
         "axum_websocket_client_example",
         "axum_echo_example",
