--- a/axum_workspace_example/axum_handle_parameter_example/Cargo.toml
+++ b/axum_workspace_example/axum_handle_parameter_example/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.5"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.122"
 tokio = { version = "1.39.2", features = ["full"] }
