add reqwest handle axum query params example

--- a/reqwest_workspace_example/Cargo.toml
+++ b/reqwest_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "reqwest_post_protobuf_tokio_stream_example",
         "reqwest_get_post_state_channel_example",
         "reqwest_basic_example",
+        "reqwest_handle_axum_query_params_example",
 ]
