--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -26,4 +26,5 @@ members = [
         "axum_otlp_example",
         "axum_route_service_example",
         "socketioxide_example",
+        "axum_basic_auth_example",
 ]
