add axum_streams json example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -27,4 +27,5 @@ members = [
         "axum_route_service_example",
         "socketioxide_example",
         "axum_basic_auth_example",
+        "axum_streams_json_example",
 ]
