--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -28,4 +28,5 @@ members = [
         "socketioxide_example",
         "axum_basic_auth_example",
         "axum_streams_json_example",
+        "axum_streams_csv_example",
 ]
