add tokio 10k tasks 10 times for a batch example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -192,4 +192,5 @@ members = [
         "tokio_fn_recursive_example",
         "tokio_two_task_group_example",
         "tokio_wait_10k_tasks_example",
+        "tokio_10k_tasks_10_batch_example",
 ]
