--- a/tokio_workspace_example/tokio_10k_tasks_10_batch_via_mpsc_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_10k_tasks_10_batch_via_mpsc_example/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+parking_lot = "0.12.3"
 rand = "0.8.5"
 tokio = { version = "1.39.2", features = ["full"] }
