--- a/chrono_example/Cargo.toml
+++ b/chrono_example/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.19"
+anyhow = "1.0.86"
+chrono = "0.4.38"
