--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -29,4 +29,5 @@ members = [
         "axum_basic_auth_example",
         "axum_streams_json_example",
         "axum_streams_csv_example",
+        "axum_tower_sessions_example",
 ]
