add axum tower_http example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -30,4 +30,5 @@ members = [
         "axum_streams_json_example",
         "axum_streams_csv_example",
         "axum_tower_sessions_example",
+        "axum_tower_http_example",
 ]
