--- a/axum_workspace_example/axum_tower_http_example/Cargo.toml
+++ b/axum_workspace_example/axum_tower_http_example/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 axum = "0.7.5"
+http = "1.1.0"
 tokio = { version = "1.39.2", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
