--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -39,4 +39,5 @@ members = [
         "libp2p_tokio_stream_only_client_example",
         "libp2p_tokio_upnp_example",
         "libp2p_authenticate_example",
+        "libp2p_gossipsub_and_stream_example",
 ]
