--- a/tarpc_workspace_example/tarpc_service_example/Cargo.toml
+++ b/tarpc_workspace_example/tarpc_service_example/Cargo.toml
@@ -10,16 +10,16 @@ anyhow = "1.0.82"
 clap = {version = "4.5.4", features = ["derive"] }
 futures = "0.3.30"
 log = "0.4.21"
-opentelemetry = "0.22.0"
-opentelemetry-otlp = "0.15.0"
-opentelemetry_sdk = { version = "0.22.1", features = ["tokio", "rt-tokio", "tokio-stream"] }
+opentelemetry = "0.24.0"
+opentelemetry-otlp = "0.17.0"
+opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
 rand = "0.8.5"
 tarpc = { version = "0.34.0", features = ["full"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tracing = "0.1.40"
-tracing-opentelemetry = "0.23.0"
+tracing-opentelemetry = "0.25.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter","std"] }
-
+opentelemetry-semantic-conventions = "0.16.0"
 
 [lib]
 name = "service"
