--- a/quinn_workspace_example/quinn_server_example/Cargo.toml
+++ b/quinn_workspace_example/quinn_server_example/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
-clap = { version = "4.5.13", features = ["derive"] }
+clap = { version = "4.5.15", features = ["derive"] }
 directories-next = "2.0.0"
 quinn = "0.11.3"
+proto = { version = "0.11.6", package = "quinn-proto" }
 rcgen = "0.13.1"
 rustls = "0.23.12"
 rustls-pemfile = "2.1.3"
-rustls-pki-types = "1.7.0"
+rustls-pki-types = "1.8.0"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1.40"
 tracing-futures = "0.2.5"
