--- a/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
@@ -2,15 +2,17 @@
 name = "libp2p_tokio_metrics_example"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 async-trait = "0.1.81"
 axum = "0.7.5"
+base64 = "0.22.1"
+clap = { version = "4.5.16", features = ["derive"] }
 either = "1.13.0"
 env_logger = "0.11.5"
 futures = "0.3.30"
+futures-timer = "3.0.3"
 http-body-util = "0.1.2"
 hyper-util = { version = "0.1.7", features = ["full"] }
 libp2p = { version = "0.54.0", features = ["full"] }
@@ -19,7 +21,11 @@ opentelemetry-otlp = { version = "0.17.0", features = ["metrics"] }
 opentelemetry_api = "0.20.0"
 opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio", "metrics"] }
 prometheus-client = "0.22.3"
+serde = { version = "1.0.208", features = ["derive"] }
+serde_derive = "1.0.208"
+serde_json = "1.0.125"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1.40"
 tracing-opentelemetry = "0.25.0"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+zeroize = "1.8.1"
