--- a/libsecp256k1_workdspace_example/Cargo.toml
+++ b/libsecp256k1_workdspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "libsecp256k1_secretkey_example",
         "libsecp256k1_publickey_example",
         "secp256k1_secretkey_example",
+        "secp256k1_publickey_example",
 ]
