add redis transaction example

--- a/redis_workspace_example/Cargo.toml
+++ b/redis_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "redis_connection_manager_example",
         "redis_cache_for_sqlx_example",
         "redis_ttl_example",
+        "redis_transaction_example",
 ]
