--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -194,4 +194,5 @@ members = [
         "tokio_wait_10k_tasks_example",
         "tokio_10k_tasks_10_batch_example",
         "tokio_10k_tasks_10_batch_via_mpsc_example",
+        "tokio_basic_example",
 ]
