--- a/sqlx_workspace_example/Cargo.toml
+++ b/sqlx_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "bigdecimal_basic_example",
         "sqlx_bigdecimal_example",
+        "u256_bigdecimal_example",
 ]
