add sqlx chrono compare example

--- a/sqlx_workspace_example/Cargo.toml
+++ b/sqlx_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "sqlx_bigdecimal_example",
         "u256_bigdecimal_example",
         "sqlx_u256_bigdecimal_example",
+        "sqlx_chrono_compare_example",
 ]
