--- a/sqlx_workspace_example/sqlx_chrono_compare_example/.env
+++ b/sqlx_workspace_example/sqlx_chrono_compare_example/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://postgres:mypassword@localhost:15432/chs-host"
+DATABASE_URL="postgres://postgres:mypassword@localhost:15432/test"
