add sqlx multi sql transaction example

--- a/sqlx_workspace_example/Cargo.toml
+++ b/sqlx_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "u256_bigdecimal_example",
         "sqlx_u256_bigdecimal_example",
         "sqlx_chrono_compare_example",
+        "sqlx_multi_sql_transaction_example",
 ]
