add sqlx multi sql acquire example

--- a/sqlx_workspace_example/Cargo.toml
+++ b/sqlx_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "sqlx_u256_bigdecimal_example",
         "sqlx_chrono_compare_example",
         "sqlx_multi_sql_transaction_example",
+        "sqlx_multi_sql_acquire_example",
 ]
