--- a/chrono_workspace_example/Cargo.toml
+++ b/chrono_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "chrono_example",
         "chrono_current_begin_hour_example",
         "chrono_begin_naivedate_example",
+        "chrono_sort_days_example",
 ]
