--- a/sentry_workspace_example/sentry_tracing_demo_example/Cargo.toml
+++ b/sentry_workspace_example/sentry_tracing_demo_example/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 sentry = "0.34.0"
 sentry-tracing = "0.34.0"
 tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
