--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -44,4 +44,6 @@ members = [
         "libp2p_autonatv2_client_example",
         "libp2p_libsecp256k1_secret_key_example",
         "libp2p_secp256k1_secret_key_example",
+        "libp2p_request_response_server_example",
+        "libp2p_request_response_client_example",
 ]
