add sentry values hash example

--- a/sentry_workspace_example/Cargo.toml
+++ b/sentry_workspace_example/Cargo.toml
@@ -16,4 +16,5 @@ members = [
         "sentry_thread_demo_example",
         "sentry_tracing_demo_example",
         "sentry_crash_example",
+        "sentry_values_hash_example",
 ]
