add cached timedsizedcache set example

--- a/cached_workspace_example/Cargo.toml
+++ b/cached_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "cached_example",
         "cached_timedsizedcache_example",
+        "cached_timedsizedcache_set_example",
 ]
