add cached basic macro example

--- a/cached_workspace_example/Cargo.toml
+++ b/cached_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "cached_example",
         "cached_timedsizedcache_example",
         "cached_timedsizedcache_set_example",
+        "cached_basic_macro_example",
 ]
