add tracing span example

--- a/tracing_workspace_example/Cargo.toml
+++ b/tracing_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "tracing_opentelemetry_example",
         "trace_example",
         "trace_macros_example",
+        "tracing_span_example",
 ]
