--- a/tracing_workspace_example/tracing_span_example/Cargo.toml
+++ b/tracing_workspace_example/tracing_span_example/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = "0.12.7"
-serde = "1.0.210"
+reqwest = { version = "0.12.7", features = ["json"] }
+serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
